--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   google_fonts: ^3.0.1
   lecle_flutter_carousel_pro: ^0.0.1+1
   dio: ^4.0.6
+  provider: ^6.0.5
   flutter:
     sdk: flutter
 
