--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   cupertino_icons: ^1.0.5
   google_fonts: ^3.0.1
   lecle_flutter_carousel_pro: ^0.0.1+1
+  carousel_slider: ^4.2.1
   dio: ^4.0.6
   provider: ^6.0.5
   flutter:
