--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,21 +29,17 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  cupertino_icons: ^1.0.5
-  google_fonts: ^3.0.1
-  lecle_flutter_carousel_pro: ^0.0.1+1
   carousel_slider: ^4.2.1
+  cupertino_icons: ^1.0.5
   dio: ^4.0.6
-  provider: ^6.0.5
   flutter:
     sdk: flutter
+  flutter_html: ^2.2.1
+  google_fonts: ^3.0.1
+  lecle_flutter_carousel_pro: ^0.0.1+1
+  provider: ^6.0.5
 
 dev_dependencies:
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
