--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,12 +31,12 @@ environment:
 dependencies:
   carousel_slider: ^4.2.1
   cupertino_icons: ^1.0.5
-  dio: ^4.0.6
+  dio: ^5.2.0
   flutter:
     sdk: flutter
-  flutter_html: ^2.2.1
+  # flutter_html: ^2.2.1
 
-  google_fonts: ^3.0.1
+  google_fonts: ^5.0.0
   lecle_flutter_carousel_pro: ^0.0.1+1
   provider: ^6.0.5
 
@@ -44,7 +44,7 @@ dev_dependencies:
   flutter_lints: ^2.0.1
   flutter_test:
     sdk: flutter
-  flutter_native_splash: ^2.2.0+1
+  flutter_native_splash: ^2.3.1
 
 flutter_native_splash:
   color: "#FFC107"
